--- a/index.html
+++ b/index.html
@@ -208,6 +208,7 @@ header {
   position: absolute;
   bottom: 0; left: 0; right: 0;
   height: 70px;
+  z-index: 1;
 }
 
 .hero-skyline svg {
@@ -224,6 +225,7 @@ header {
   justify-content: center;
   padding: 0 24px;
   pointer-events: none;
+  z-index: 2;
 }
 
 .hero-bismillah {
